--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-superkey="Mouli"
+superkey=Mouli
+jwt_key=9c7dd1f0f9b34bbaa9fcbe6582162413
+jwt_algo=HS256
+email_sender=aryamouli1@gmail.com
+email_password=ucwz tpax ncvy czah
