--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,38 @@
 alembic==1.13.1
+aniso8601==9.0.1
 annotated-types==0.6.0
+attrs==23.2.0
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
+Flask-JWT-Extended==4.6.0
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.7
+flask-restx==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 idna==3.6
 importlib_metadata==7.0.2
+importlib_resources==6.3.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 Mako==1.3.2
 MarkupSafe==2.1.5
 passlib==1.7.4
 psycopg2==2.9.9
 pydantic==2.6.4
+pydantic-settings==2.2.1
 pydantic_core==2.16.3
+PyJWT==2.8.0
 python-dotenv==1.0.1
+pytz==2024.1
+referencing==0.34.0
+rpds-py==0.18.0
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
 Werkzeug==3.0.1
