--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ aniso8601==9.0.1
 annotated-types==0.6.0
 attrs==23.2.0
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
@@ -32,8 +34,10 @@ PyJWT==2.8.0
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.34.0
+requests==2.31.0
 rpds-py==0.18.0
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
+urllib3==2.2.1
 Werkzeug==3.0.1
 zipp==3.18.1
