--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
+exceptiongroup==1.2.0
 Flask==3.0.2
 Flask-JWT-Extended==4.6.0
 Flask-Mail==0.9.1
@@ -19,24 +20,31 @@ greenlet==3.0.3
 idna==3.6
 importlib_metadata==7.0.2
 importlib_resources==6.3.2
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 Mako==1.3.2
 MarkupSafe==2.1.5
+packaging==24.0
 passlib==1.7.4
+pluggy==1.4.0
 psycopg2==2.9.9
 pydantic==2.6.4
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
 PyJWT==2.8.0
+pytest==8.1.1
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 referencing==0.34.0
 requests==2.31.0
+responses==0.25.0
 rpds-py==0.18.0
 SQLAlchemy==2.0.28
+tomli==2.0.1
 typing_extensions==4.10.0
 urllib3==2.2.1
 Werkzeug==3.0.1
