--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+Deprecated==1.2.14
 dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.0
 Flask==3.0.2
 Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.5.1
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.7
 flask-restx==1.3.0
@@ -25,8 +27,12 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+limits==3.10.1
 Mako==1.3.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+ordered-set==4.1.0
 packaging==24.0
 passlib==1.7.4
 pluggy==1.4.0
@@ -34,6 +40,7 @@ psycopg2==2.9.9
 pydantic==2.6.4
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
+Pygments==2.17.2
 PyJWT==2.8.0
 pytest==8.1.1
 python-dotenv==1.0.1
@@ -42,10 +49,12 @@ PyYAML==6.0.1
 referencing==0.34.0
 requests==2.31.0
 responses==0.25.0
+rich==13.7.1
 rpds-py==0.18.0
 SQLAlchemy==2.0.28
 tomli==2.0.1
 typing_extensions==4.10.0
 urllib3==2.2.1
 Werkzeug==3.0.1
+wrapt==1.16.0
 zipp==3.18.1
